manifests/cert-manager/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-webhook
  labels:
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/component: webhook
      app.kubernetes.io/name: webhook
  ingress:
    - fromEntities: [host, remote-node]
      toPorts:
        - ports:
            - port: https
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-metrics
  labels:
    app.kubernetes.io/instance: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: http-metrics
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics
